--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   </head>
   <body>
     <div class="container">
-      <div class="hero"><img src="assets/hero.webp" alt="" /></div>
+      <div class="hero-title"><img src="assets/hero_text.png" alt="WEB NEAT"></div>
+      <div class="hero"><img src="assets/hero.webp" alt="貓貓調酒師" /></div>
       <div class="components-wrap">
         <div id="tabs-wrap" class="tabs-wrap">
           <button class="tab-btn active" onclick="switchTabs('header')">
